# sin5026

./: README.md  setup.cfg
SIN5026Analyzer/: __init__.py  compare.py  generator.py
SIN5026Analyzer/ga/: solver.py
SIN5026Analyzer/ilp/: solver.py
