[metadata]
name = SIN5026Analyzer
version = 1.0.0a1
author = Mateus Interciso
author_email = minterciso@gmail.com
long_description = README.md
description = Small package to facilitate analysis for SIN5026 final work
url = https://source.cloud.google.com/smart-cloud-automation/gcpUtils
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = SIN5026Analyzer
packages = find:
python_requires = >= 3.7

[options.packages.find]
where = SIN5026Analyzer